# ua-detection

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  client.cpp  data_in.txt  data_model.md  main.cpp  makefile  server.cpp
FileInputReader/src/: FileInputReader.cpp  FileInputReader.h
FileInputReader/test/: fileInputReaderTest.cpp  fileInputReaderTest.h
NaiveBayessClassifier/test/: naiveBayesClassifierTest.cpp
NgramBuilder/src/: NgramBuilder.cpp  NgramBuilder.h
NgramBuilder/test/: ngramBuilderTest.cpp  ngramBuilderTest.h
UATokenizer/src/: UATokenizer.cpp  UATokenizer.h
UATokenizer/test/: uaTokenizerTest.cpp  uaTokenizerTest.h
common/config/: client.txt  server.txt
common/src/: FileLog.cpp  FileLog.h  ProgramConfig.cpp  ProgramConfig.h  uadet2.h
common/test/: programConfigTest.cpp  programConfigTest.h  programConfigTestRunner.cpp
config/: client.txt  server.txt
data/: db_config.txt  download-data.sh  user_agents.txt  validate.sh
doc/: Parsing_UA.md  README.md  branching_strategy.md  case_study.md  data_model.md  keywords_lookup.md  postgres.md  sample-mobile.cls.txt  uadet.md  user_agent.md
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
py-mgr/: README.md  deps.txt  httpend.py  import.sh  package.json  tables.sql
py-mgr/js-src/: API.js  BrowserObjectsWrapper.js  Table.js  TableController.js  TableRowModel.js  main.js  tableModel.js
py-mgr/js-test/: apiTest.js  tableModelTest.js  tableRowModelTest.js  tableTest.js
py-mgr/src/: Dao.py  HTTP.py  Pg.py  Routing.py  postgres-scratch.py
py-mgr/static/: 404.html  add.html  import.html  index.html
server/src/: protocol.cpp  protocol.h  sockets.cpp  sockets.h  utils.cpp  utils.h
src/: ann.c  ann.h  binary_node.c  binary_node.h  bitmask.c  bitmask.h  btree.c  btree.h  client.cpp  db.c  db.h  dbh.c  dbh.h  detection.c  dictionary.c  dictionary.h  evaluation.c  fileutil.c  fileutil.h  htable_int.c  htable_int.h  link_node.c  link_node.h  link_node_template.c  linked_list.c  logging.c  logging.h  main.cpp  probab.c  probab.h  program.c  reader.c  reader.h  server.cpp  tokenizer.c  tokenizer.h  training.c  ua_db.c  uadet.cpp  uas.c  (+3 more)
src/Client/src/: Client.cpp  Client.h
src/Client/test/: CMakeLists.txt  clientTest.cpp  clientTest.h
src/FileInputReader/src/: FileInputReader.cpp  FileInputReader.h
src/FileInputReader/test/: CMakeLists.txt  fileInputReaderTest.cpp  fileInputReaderTest.h  fileInputReaderTestRunner.cpp
src/FileInputReader/test/resources/: test.txt
src/NaiveBayessClassifier/src/: NBCCache.cpp  NBCCache.h  NaiveBayessClassifier.cpp  NaiveBayessClassifier.h
src/NaiveBayessClassifier/test/: CMakeLists.txt  NBCCacheTest.cpp  NBCCacheTest.h  NBCCacheTestRunner.cpp  naiveBayesClassifierTest.cpp  naiveBayesClassifierTest.h
src/Network/src/: Network.cpp  Network.h
src/Network/test/: CMakeLists.txt  networkTest.cpp  networkTest.h
src/NgramBuilder/src/: NgramBuilder.cpp  NgramBuilder.h  UaNgramBuilder.cpp  UaNgramBuilder.h
src/NgramBuilder/test/: CMakeLists.txt  ngramBuilderTest.cpp  ngramBuilderTest.h  uaNgramBuilderTest.cpp  uaNgramBuilderTest.h  uaNgramBuilderTestRunner.cpp
src/Server/src/: Server.cpp  Server.h  protocol.cpp  protocol.h  sockets.cpp  sockets.h  utils.cpp  utils.h
src/Server/test/: CMakeLists.txt  serverTest.cpp  serverTest.h  serverTestRunner.cpp
src/UATokenizer/src/: UATokenizer.cpp  UATokenizer.h
src/UATokenizer/test/: CMakeLists.txt  uaTokenizerTest.cpp  uaTokenizerTest.h  uaTokenizerTestRunner.cpp
src/common/src/: Command.cpp  Command.h  FileLog.cpp  FileLog.h  ProgramConfig.cpp  ProgramConfig.h  uadet2.cpp  uadet2.h
src/common/test/: CMakeLists.txt  commandTest.cpp  commandTest.h  commandTestRuner.cpp  fileLogTest.cpp  fileLogTest.h  programConfigTest.cpp  programConfigTest.h  server.config.txt  uadet2Test.cpp  uadet2Test.h
src/lib/: db.h
src/model/: bayes.h  tokenList.h
src/ngram/: NgramBuilder.cpp  NgramBuilder.h
src/prediction/: NaiveBayesPredictor.cpp  NaiveBayesPredictor.h
src/server/src/: sockets.cpp  sockets.h  utils.cpp  utils.h
src/tokenizer/: UserAgentTokenizer.cpp  UserAgentTokenizer.h
src/training/: NaiveBayesTraining.cpp  NaiveBayesTraining.h
src/util/: StringBuffer.cpp  StringBuffer.h  btree.h  logging.h  memutil.h  types.h  utils.cpp  utils.h
test/: Makefile  README.md  binary_node_test.c  binary_node_test.h  bitmask_test.c  bitmask_test.h  btree_test.c  btree_test.h  dictionary_test.c  dictionary_test.h  htable_int_test.c  htable_int_test.h  link_node_test.c  link_node_test.h  main.c  probab_test.c  probab_test.h  reader_test.c  reader_test.h  suite.c  suite.h  test  test_ann.c  test_dbh.c  test_suite.h  test_uas.c  test_utils.c  tokenizer_test.c  tokenizer_test.h
test/resources/: uas_with_class.txt
tools/: .gitignore  calc_keywords_weights.js  calc_weights_devices.js  calculate_keywords_weights.js  create_training_keywords.js  data_api.js  package.json  prepare_training_set.js  process_user_agents_datafile.js  ua_string_hash.js
